fixed a responsiveness bug on mobile view

--- a/public_html/assets/css/meyawo.css
+++ b/public_html/assets/css/meyawo.css
@@ -61,7 +61,7 @@
 @keyframes appear-right {
   from{
     opacity: 0;
-    transform: translate(100px);
+    transform: translate(70px);
   }to{
     opacity: 1;
     transform: translate(0px);
